* Makefile.in ($(LIBG2C)): Fix -rpath argument to libtool.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47606 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,5 +1,7 @@
 2001-12-04  Alexandre Oliva  <aoliva@redhat.com>
 
+	* Makefile.in ($(LIBG2C)): Fix -rpath argument to libtool.
+
 	* Makefile.in (AR, RANLIB): Add, for substitutions.
 	(all-unilib, $(LIBG2C)): Depend on object lists, not
 	convenience libraries.
