--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-04  Alexandre Oliva  <aoliva@redhat.com>
+
+	* semantics.c (begin_global_stmt_expr): Adjust
+	expand_start_stmt_expr invocation.
+
 2001-12-04  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* pt.c (end_template_parm_list): Clear TREE_CHAIN of each parm.
