--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-04  Andrew MacLeod  <amacleod@redhat.com>
+
+	* stmt.c (expand_return): Clear destination instead of clobbering it 
+	when setting a return value via bitsets.
+
 2001-12-04  Alexandre Oliva  <aoliva@redhat.com>
 
 	* tree.c (get_callee_fndecl): Only use DECL_ABSTRACT_ORIGIN if
