--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-04  Zack Weinberg  <zack@codesourcery.com>
+
+	* Makefile.in: Don't set ALL.  Delete @cross_defines@,
+	@cross_overrides@, @build_overrides@ stanzas.  INTERNAL_CFLAGS
+	is now @CROSS@ -DIN_GCC; update comment.
+
 2001-12-04  Robert Dewar <dewar@gnat.com>
 
 	* einfo.adb (Has_Pragma_Pure_Function): New flag.
