--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-04  Zack Weinberg  <zack@codesourcery.com>
+
+	* Makefile.in: Don't set ALL.  Delete @cross_defines@,
+	@cross_overrides@, @build_overrides@ stanzas.  INTERNAL_CFLAGS
+	is now @CROSS@ -DIN_GCC; update comment.
+
 2001-12-03  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* actions.c: Remove leading capital from diagnostic messages, as
