* Makefile.in (update-sources): New target. 	For use by gcc_release script.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47625 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-04  Geert Bosch  <bosch@gnat.com>
+
+	* Makefile.in (update-sources): New target. 
+	For use by gcc_release script.
+
 2001-12-04  Ed Schonberg <schonber@gnat.com>
 
 	* sem_prag.adb (Analyze_Pragma, case Validity_Checks): do not treat as 
