* einfo.h, nmake.adb, nmake.ads, sinfo.h, treeprs.ads: Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47626 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-04  Geert bosch <bosch@gnat.com>
+
+	* einfo.h, nmake.adb, nmake.ads, sinfo.h treeprs.ads: Regenerate.
+
 2001-12-04  Geert Bosch  <bosch@gnat.com>
 
 	* Makefile.in (update-sources): New target. 
