--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-04  Neil Booth  <neil@daikokuya.demon.co.uk>
+
+	* cppspec.c (lang_specific_driver): Set is_cpp_driver.
+	* gcc.c (process_command): Ensure the cpp driver sees
+	--help and --target-help, and that the help is printed
+	exactly once.
+
 2001-12-04  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/elfos.h (ASM_OUTPUT_INTERNAL_LABEL): Display count unsigned.
@@ -140,7 +147,7 @@
 2001-12-03  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	PR c/4988
-	* (process_command): Don't add a preprocessor option for
+	* gcc.c (process_command): Don't add a preprocessor option for
 	--help and --target-help; cc1 is enough.
 
 2001-12-03  Neil Booth  <neil@daikokuya.demon.co.uk>
