--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-04  Arnaud Charlet <charlet@gnat.com>
+
+	* Makefile.adalib: Clarify step 3 (use of gnat.adc) as it causes 
+	more confusion than it solves.
+
 2001-12-04  Geert bosch <bosch@gnat.com>
 
 	* einfo.h, nmake.adb, nmake.ads, sinfo.h treeprs.ads: Regenerate.
