--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-05  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/rs6000/rs6000.c (rs6000_legitimize_address): Fix typo.
+	* config/rs6000/rs6000.h (LEGITIMATE_LO_SUM_ADDRESS_P): Here too.
+
 2001-12-04  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* c-common.def (COMPOUND_LITERAL_EXPR): New.
