* fixinc/fixincl.c (initialize): Avoid problemsome macro parameter names (PR 3388).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47632 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-04  DJ Delorie  <dj@redhat.com>
+
+	* fixinc/fixincl.c (initialize): Avoid problemsome macro
+	parameter names (PR 3388).
+
 2001-12-05  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/rs6000.c (rs6000_legitimize_address): Fix typo.
