2001-12-04  Phil Edwards  <pme@gcc.gnu.org>
	* Makefile.in:  Add INSTALL_SCRIPT using INSTALL definition.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47633 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-04  Phil Edwards  <pme@gcc.gnu.org>
+
+	* Makefile.in:  Add INSTALL_SCRIPT using INSTALL definition.
+
 2001-12-04  DJ Delorie  <dj@redhat.com>
 
 	* fixinc/fixincl.c (initialize): Avoid problemsome macro
