--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-05  Martin v. Löwis  <loewis@informatik.hu-berlin.de>
+
+	* da.po, es.po, fr.po, ja.po: New files.
+
 2001-11-08  Zack Weinberg  <zack@codesourcery.com>
 
 	* exgettext: Deposit new potfile in po subdir.
