* adaint.c: Minor cleanups.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47637 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-04  Douglass B. Rupp <rupp@gnat.com>
 
+	* adaint.c: Minor cleanups.
+
+2001-12-04  Douglass B. Rupp <rupp@gnat.com>
+
 	* adaint.c: Do not use utime.h on vxworks.
 
 2001-12-04  Arnaud Charlet <charlet@gnat.com>
