--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,11 @@
+2001-12-04  Robert Dewar <dewar@gnat.com>
+
+	* exp_util.adb: Minor reformatting from last change
+	
+	* errout.adb (Check_For_Warning): For a Raised_Constraint_Error node 
+	which is a rewriting of an expression, traverse the original 
+	expression to remove warnings that may have been posted on it.
+
 2001-12-04  Ed Schonberg <schonber@gnat.com>
 
 	* exp_util.adb (Must_Be_Aligned): Return false for a component of a 
