* errout.adb: Minor reformatting
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47640 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-04  Robert Dewar <dewar@gnat.com>
 
+	* errout.adb: Minor reformatting
+
+2001-12-04  Robert Dewar <dewar@gnat.com>
+
 	* exp_util.adb: Minor reformatting from last change
 	
 	* errout.adb (Check_For_Warning): For a Raised_Constraint_Error node 
