--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-04  Andrew MacLeod  <amacleod@redhat.com>
+
+	* rtl.h (initialize_uninitialized_subregs): New prototype.
+	* toplev.c (rest_of_compilation): Call initialize_uninitialized_subregs
+	when optimization is on.
+	* flow.c (find_regno_partial): Find subregs within an expression.
+	(initialize_uninitialized_subregs): Initialize live on entry registers
+	which are used in subreg expressions.
+
 2001-12-04  Phil Edwards  <pme@gcc.gnu.org>
 
 	* Makefile.in:  Add INSTALL_SCRIPT using INSTALL definition.
