* Makefile.in: (HIE_SOURCES): add s-fat*.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47647 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-04  Arnaud Charlet <charlet@gnat.com>
+
+	* Makefile.in: (HIE_SOURCES): add s-fat*.
+
 2001-12-04  Robert Dewar <dewar@gnat.com>
 
 	* sem_attr.adb:
