* einfo.ads: Minor reformatting
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47650 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-04  Robert Dewar <dewar@gnat.com>
+
+	* einfo.ads: Minor reformatting
+
 2001-12-04  Ed Schonberg <schonber@gnat.com>
 
 	* einfo.ads: Block_Node points to the identifier of the block, not to 
