* sem_ch12.adb: 	(Analyze_Formal_Type_Definition): Defend against Error. 	(Analyze_Formal_Subprogram): Defend against Error.
	* par-ch12.adb (F_Formal_Type_Declaration): In case of error,
	remove following semicolon if present. Removes cascaded error.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47652 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-04  Robert Dewar <dewar@gnat.com>
+
+	* sem_ch12.adb:
+	(Analyze_Formal_Type_Definition): Defend against Error.
+	(Analyze_Formal_Subprogram): Defend against Error.
+	
+	* par-ch12.adb (F_Formal_Type_Declaration): In case of error, 
+	remove following semicolon if present. Removes cascaded error.
+
 2001-12-04  Douglas B. Rupp <rupp@gnat.com>
 
 	* bindgen.adb:
