--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Wed Dec  5 00:42:16 EST 2001  John Wehle  (john@feith.com)
+
+	* emit-rtl.c (set_unique_reg_note): Don't set
+	a REG_EQUAL or REG_EQUIV note if multiple sets
+	are present.
+
 2001-12-04  John David Anglin  <dave@hiauly1.hia.nrc.ca>
 
 	* cfgrtl.c (verify_flow_info): Allow jump table data in fallthru if
