--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 Wed Dec  5 06:26:27 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
+	* expr.c (store_expr): When copying string constant into array,
+	use functions that update memrefs instead of computations on
+	addresses to better track MEMs.  Also properly handle 32/64 pointers.
+	(expand_expr): Use TARGET even if not reg for multi-word CONSTRUCTOR.
+	(expand_expr, case CONSTRUCTOR): Fix errors in parms to assign_temp.
+
 	* emit-rtl.c (component_ref_for_mem_expr): Try harder to find decl
 	underneath COMPONENT_REFs.
 	(set_mem_attributes): Also strip VIEW_CONVERT_EXPR.
