--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+Wed Dec  5 07:27:42 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+			  Douglas B. Rupp  <rupp@gnat.com>
+	
+	* vmsdbg.h, vmsdbgout.c: Add documentation and minor cleanups.
+	* doc/invoke.texi: Add -gvms.
+	* doc/passes.texi: Add mention of vmsdbgout.c.
+	* doc/tm.texi: Document VMS debugging output.
+
 Wed Dec  5 06:26:27 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* function.h (tree, rtx): Remove no-longer-needed definitions.
