--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Wed Dec  5 07:41:13 2001  Douglas B. Rupp  <rupp@gnat.com>
+
+	* config/alpha/alpha.c (alpha_va_start): Update VMS case.
+
 Wed Dec  5 07:27:42 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 			  Douglas B. Rupp  <rupp@gnat.com>
 	
