--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -4,6 +4,8 @@
 
 	* gcc.dg/noncompile/20011025-1.c: New test.
 
+	* g++.dg/other/anon-union.C: New test.
+
 2001-12-04  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.c-torture/execute/20000722-1.x,
