* gcse.c (store_killed_in_insn): Consider pure calls 	as potential store killers in addition to normal calls.
	* gcc.c-torture/execute/20011024-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47675 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -6,6 +6,8 @@
 
 	* g++.dg/other/anon-union.C: New test.
 
+	* gcc.c-torture/execute/20011024-1.c: New test.
+
 2001-12-04  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.c-torture/execute/20000722-1.x,
