* prj-dect.adb (Parse): Rename parameter Modifying to Extends.
	* prj-dect.ads (Parse): Rename parameter Modifying to Extends.

	* prj-env.adb: Minor comment changes (modifying -> extends).

	* prj-nmsc.adb: Minor comment changes (modifying -> extends).

	* prj-part.adb (Parse_Single_Project): Change Tok_Modifying to
	Tok_Extends.

	* prj.adb (Initialize): Change Modifying to Extends.

	* scans.ads (Token_Type): Change Tok_Modifying to Tok_Extends.

	* prj.ads: Minor comment change (Modifying -> extending).

	* snames.ads: Change modifying to extends.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47679 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-05  Geert Bosch <bosch@gnat.com>
+
+	* snames.adb: Autoupdate
+
 2001-12-05  Vincent Celier <celier@gnat.com>
 
 	* prj-dect.adb (Parse): Rename parameter Modifying to Extends.
